--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </h1>
             </div>
             <div class="video">
-                <iframe src="https://player.vimeo.com/video/76979871" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="video"></iframe>
+                <iframe src="https://player.vimeo.com/video/76979871" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen portrait="false" id="video"></iframe>
                 <span class="video-overlay" id="play-video"><i id="play-icon" class="fa fa-play"></i></span>
             </div>
             <div class="about">
