--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span class="video-overlay" id="play-video"><i id="play-icon" class="fa fa-play"></i></span>
             </div>
             <div class="about">
-                <h2>NOMA<span class="typer" id="some-id" data-deleteDelay="100" data-delay="200" data-delim=":" data-words="DES:DISMO:DES:DISTIC" data-colors="#C3C3C3"></span><span class="cursor" data-cursorDisplay="_" data-owner="some-id"></span></h2>
+                <h2><span class="typer" id="some-id"data-delay="200" data-delim=":" data-words="NOMA:NOMADE:NOMADISMO:NÔMADES:NOMA COLETIVO" data-deleteDelay="5000" data-colors="#333333"></span><span class="cursor" data-cursorDisplay="_" data-owner="some-id"></span></h2>
                 <p>NOMA is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
             </div>
             <div class="countries">
@@ -37,9 +37,8 @@
             </div>
         </div>
     </body>
-    <script src="./js/typer.js"></script>
     <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
     <script src="./js/pegadinha-do-malandro.js"></script>
-
+    <script src="./js/typer.js"></script>
 
 </html>
