--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Noma Coletivo</title>
         <link rel="stylesheet" href="./css/style.css" media="screen" title="no title">
         <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <script src="https://use.fontawesome.com/d441707a5a.js"></script>
